# kukuruzo

./: .gitignore  README
android/: README.md
android/interpolation/: AndroidManifest.xml
android/interpolation/res/layout/: main.xml
android/interpolation/res/menu/: menu.xml
android/interpolation/res/values/: colors.xml  strings.xml  styles.xml
android/interpolation/res/values-en/: strings.xml
android/interpolation/res/values-ru/: strings.xml
android/regexptester/: .project  AndroidManifest.xml
android/regexptester/res/layout-normal-notlong-land-finger-keysexposed-qwerty-trackball/: main.xml
other/: README.md
other/aimp_psi_tune/: AIMP_SDK.dcu  Readme.md  aimp_psi_tune.dof  aimp_psi_tune.dpr  aimp_psi_tune.res  optDialog.dcu  optDialog.dfm  optDialog.pas
other/songbird_tunetopsi/: chrome.manifest  install.rdf
python/: README.md
python/cplugins_script/: compile-plugins.py  setup.bat  setup.py
python/exaile-remote-plugin/: Options.py  PLUGININFO  __init__.py  changelog  remote.ui  setup.py
python/exaile-tunetopsi-plugin/: PLUGININFO  __init__.py  changelog  setup.py
python/htmltotextgui/: README  htmltotextgui  htmltotextgui.desktop  main.glade  main_win.glade  setup.bat  setup.py  setup_win.py  win_setup.py
python/pyHistoryMerge/: hismerger  psihistorymerger.desktop  setup.bat  setup.py  setup_win.py
python/pyHistoryMerge/historyMerge/: __init__.py  filework.py  mainwin.py  reswork.py
python/pyalsavolume/: Readme  changelog  pySettingsFrame.glade  pySliderFrame.glade  pyalsavolume  pyalsavolume.desktop  setup.py
python/pyalsavolume/lang/: en.lng  ru.lng  ua.lng
python/pyalsavolume/pyAlsaVolume/: __init__.py  animate.py  pyLocalize.py  pyOptions.py  pySettingsFrame.py  pySliderFrame.py  pyTrayIcon.py  reswork.py
python/pyinterpol/: install.nsi  mForm.glade  pyinterpol.py  setup.bat  setup.py  winsetup.py
python/pyinterpol/pyInterpol/: pyInterpol.py
python/pypoweroff/: win_setup.py
python/pypoweroff/pypoweroff/: mainframe.py
python/pysshclient/: README  changelog  mainform.glade  pysshclient  pysshclient.desktop  setup.py
python/pysshclient/pySSHClient/: Options.py  mycrypt.py  pyTrayIcon.py
python/rb-remote-plugin/: __init__.py  changelog  plugin.glade  remote.rb-plugin  setup.py
python/rb-restore-plugin/: __init__.py  changelog  restore.glade  restore.rb-plugin  setup.py
python/rb-tunetopsi-plugin/: __init__.py  setup.py  tunetopsi.rb-plugin
python/screensaverdisable/: screensaverdisable.py
qt/qtalsavolume/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  PKGBUILD.in  README  conf.pri  defines.h  fix-codestyle.cmake  icons.qrc  main.cpp  popupwindow.cpp  popupwindow.h  qtalsavolume.desktop  qtalsavolume.desktop.in  qtalsavolume.pro  qtvars.cmake  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  use_cpack.cmake  version.cmake
qt/qtalsavolume/alsawork/: alsadevice.cpp  alsadevice.h  alsawork.cpp  alsawork.h  mixerswitches.cpp  mixerswitches.h  volumemixers.cpp  volumemixers.h
qt/qtalsavolume/cmake/modules/: fix-codestyle.cmake  use_cpack.cmake  version.cmake
qt/qtalsavolume/gui/: popupwindow.cpp  popupwindow.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  trayicon.cpp  trayicon.h
qt/qtalsavolume/languages/: qtalsavolume_en.qm  qtalsavolume_en.ts  qtalsavolume_ru.qm  qtalsavolume_ru.ts  qtalsavolume_uk.qm  qtalsavolume_uk.ts
qt/qtalsavolume/pulsework/: pulsecore.cpp  pulsecore.h  pulsedevice.cpp  pulsedevice.h  pulsework.cpp  pulsework.h
qt/qtpoweroff/: 10-upower.rules  CMakeLists.txt  PKGBUILD.in  README  changelog  defines.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtpoweroff.desktop  qtpoweroff.desktop.in  qtpoweroff.pro  qtpoweroff.qrc  qtpoweroff.rc  qtvars.cmake  use_cpack.cmake  version.cmake
qt/qtpoweroff/cmake/modules/: use_cpack.cmake
qt/qtpoweroff/languages/: qtpoweroff_en.ts  qtpoweroff_ru.ts  qtpoweroff_uk.ts
qt/regexptest/: CMakeLists.txt  ChangeLog  MyApp.rc  PKGBUILD.in  conf.pri  copyright.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  policyRules.cmake  regexptest.desktop  regexptest.desktop.in  regexptest.pro  regexptest.qc  regexpwindow.cpp  regexpwindow.h  regexpwindow.ui  resources.qrc  syntaxhighlighter.cpp  syntaxhighlighter.h  use_cpack.cmake  version.cmake
qt/regexptest/cmake/modules/: qtvars.cmake  use_cpack.cmake
qt/regexptest/docs/: regexp_help.html
qt/regexptest/langs/: regexptest_ru.qm  regexptest_ru.ts  regexptest_uk.qm  regexptest_uk.ts
qt/ssdisabler/: CMakeLists.txt  INSTALL  PKGBUILD.in  README  ssdisable.desktop  ssdisabler.desktop  use_cpack.cmake  version.cmake
qt/ssdisabler/src/: CMakeLists.txt  SSDisabler.pro  main.cpp  ssdisable.qrc  ssdisable_en.ts  ssdisabler.cpp  ssdisabler.h  ssdisabler_ru.ts  ssdisabler_uk.ts
qtalsavolume/qtalsavolume/: icons.qrc  popupwindow.cpp  qtalsavolume.pro  settingsdialog.h  settingsdialog.ui
qtalsavolume/qtalsavolume/alsawork/: mixerswitches.h  volumemixers.cpp  volumemixers.h
scripts/: Necrologue_rus.sh  Prepare-psi.cmake  build_deb_pkg.sh  build_rpms.sh  buildgloox.sh  install-pypoff.nsi  install_qtpoweroff.nsi  ppbuild.sh  psibuild.sh  resloader.sh
scripts/PKGBUILDS/psi-git/: PKGBUILD
scripts/PKGBUILDS/psi-l10n-git/: PKGBUILD
scripts/PKGBUILDS/psi-plugins/: PKGBUILD
scripts/PKGBUILDS/psi-plus-git/: PKGBUILD
scripts/PKGBUILDS/psi-plus-l10n-git/: PKGBUILD
scripts/PKGBUILDS/psi-plus-plugins-git/: PKGBUILD
scripts/PKGBUILDS/psi-plus-resources-git/: PKGBUILD
scripts/PKGBUILDS/psimedia-git/: PKGBUILD
scripts/PKGBUILDS/qomp-git/: PKGBUILD
scripts/PKGBUILDS/qtnote-git/: PKGBUILD
scripts/gentoo/: alsavolume-9999.ebuild  htmltotextgui-9999.ebuild  psi-9999-r1.ebuild  psi-plugins-9999.ebuild  psi-plus-9999.ebuild  psi-plus-plugins-9999.ebuild  pyalsavolume-9999.ebuild  pypoweroff-9999.ebuild  qtalsavolume-9999.ebuild  qtpoweroff-9999.ebuild  regexptest-9999.ebuild
scripts/msvc_psi_plus/: build_openssl.cmd  build_tidy.cmd  build_zlib.cmd  make-psiplus-cmake-64-vs.cmd  make-psiplus-cmake-64-vs.ps1  make-qca_qt5_msvc.cmd  psi-plus-setup-64.iss
(+15 files in other folders)
